--- a/authentication/package.json
+++ b/authentication/package.json
@@ -7,7 +7,10 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0"
+    "aws-sdk": "^2.804.0",
+    "dynamoose": "^2.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "test": "mocha tests/unit/"
